<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/userInfoMainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userProfilePicture"
                    android:layout_width="270dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_profile_picture"
                    android:scaleType="fitStart"
                    tools:srcCompat="@drawable/ic_baseline_account_circle_80" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username_placeholder"
                        android:textColor="@color/browser_actions_text_color"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/userOccupation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_occupation" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userBioLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userBioTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio_title"
                    android:textColor="@color/browser_actions_text_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/userBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bio_placeholder"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userRecipesLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userRecipesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipes_title"
                    android:textColor="@color/browser_actions_text_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Da implementare"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userContactsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userContactsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_title"
                    android:textColor="@color/browser_actions_text_color"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/emailContactRecord"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="48dp"
                        android:layout_height="24dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_email_24" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/rounded_button_red"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="4dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>