<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/login_title"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/login_title" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="213dp"
        android:layout_height="38dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@+id/textViewRegistratiLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/textViewRegistratiLink"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/register_link"
        app:layout_constraintBottom_toTopOf="@+id/textViewGuestLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textViewGuestLink"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/guest_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistratiLink" />

</androidx.constraintlayout.widget.ConstraintLayout>