<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_register2"
    tools:context=".RegisterStep2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/lb_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="@color/browser_actions_text_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tf_password_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="@string/password_hint"
                android:background="@drawable/rounded_border_edittext"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHighlight="@color/redOrangeLight"
                android:textColorLink="@color/redOrange"
                android:theme="@style/EditTextTheme" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/lb_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_label"
                android:textColor="@color/browser_actions_text_color"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tf_password_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="@string/password_hint"
                android:background="@drawable/rounded_border_edittext"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHighlight="@color/redOrangeLight"
                android:textColorLink="@color/redOrange"
                android:theme="@style/EditTextTheme"
                tools:ignore="TextFields" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>